test/force-app/main/default/objects/Activity/fields/Calculateur__c.field-meta.xml
<CustomField>
    <fullName>Calculateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calculateur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>