test/force-app/main/default/objects/Activity/fields/Delai_retour__c.field-meta.xml
<CustomField>
    <fullName>Delai_retour__c</fullName>
    <label>Delai retour</label>
    <type>Date</type>
</CustomField>