test/force-app/main/default/objects/Activity/fields/Niveau_de_priorit__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_priorit__c</fullName>
    <label>Niveau de priorité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Prioritaire</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>