test/force-app/main/default/objects/Activity/fields/Opportunit_non_attribu_e__c.field-meta.xml
<CustomField>
    <fullName>Opportunit_non_attribu_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunités non attribuées</label>
    <type>Checkbox</type>
</CustomField>