test/force-app/main/default/objects/Activity/fields/Resp_projet__c.field-meta.xml
<CustomField>
    <fullName>Resp_projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resp.projet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>