test/force-app/main/default/objects/Activity/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WCL</fullName>
            </value>
            <value>
                <fullName>WBU</fullName>
            </value>
            <value>
                <fullName>WGE</fullName>
            </value>
            <value>
                <fullName>WVS</fullName>
            </value>
            <value>
                <fullName>WUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>