test/force-app/main/default/objects/Activity/fields/T_che__c.field-meta.xml
<CustomField>
    <fullName>T_che__c</fullName>
    <label>Tâche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offre</fullName>
            </value>
            <value>
                <fullName>Maj offre</fullName>
            </value>
            <value>
                <fullName>Soum</fullName>
            </value>
            <value>
                <fullName>Marché P</fullName>
            </value>
            <value>
                <fullName>RDV</fullName>
            </value>
            <value>
                <fullName>Suivi</fullName>
            </value>
            <value>
                <fullName>SAV</fullName>
            </value>
            <value>
                <fullName>Offre int.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>