test/force-app/main/default/objects/Activity/fields/Type_de_t_che__c.field-meta.xml
<CustomField>
    <fullName>Type_de_t_che__c</fullName>
    <label>Type de tâche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tâche</fullName>
            </value>
            <value>
                <fullName>Tâche SAV</fullName>
            </value>
            <value>
                <fullName>Rédiger offre</fullName>
            </value>
            <value>
                <fullName>Mise à jour offre</fullName>
            </value>
            <value>
                <fullName>Remplir soumission</fullName>
            </value>
            <value>
                <fullName>Marché Public</fullName>
            </value>
            <value>
                <fullName>Projet à suivre</fullName>
            </value>
            <value>
                <fullName>Offre interne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>